<resources>
    <string name="app_name">XYZReader</string>

    <!--  Bottom Navigation View Menu Titles  -->
    <string name="articles_menu_item_title">Articles</string>
    <string name="search_menu_item_title">Search</string>
    <string name="favorites_menu_item_title">Favorites</string>
    <string name="settings_menu_title_settings">Settings</string>

    <!--    Content Description-->
    <string name="article_image_content_description">Article Image</string>
    <string name="add_favorite_button_content_description">Add Article To Favorites Button</string>
    <string name="delete_favorite_button_content_description">Delete Article From Favorites Button</string>
    <string name="static_article_search_button_content_description">Static Article Search Button</string>

    <!--    Articles List Fragment-->
    <string name="articles_header_title">Articles</string>

    <!--    Favorite Fragment-->
    <string name="favorites_title">Favorites</string>
    <string name="no_favorites_found">No Favorites Found</string>

    <!--  Search Fragment  -->
    <string name="no_search_results_found">No Results Found</string>
    <string name="search_articles_hint">Search Articles</string>

    <!--  Detail Fragment Binding  -->
    <string name="fab_body_builder_title">Title :</string>
    <string name="fab_body_builder_by">By :</string>

    <!--  Card Text  -->
    <string name="by_author">By</string>

    <!--    Tools Text-->
    <string name="article_title_tools_text">Article Title</string>
    <string name="author_name_tools_text">Author Name</string>
    <string name="article_search_item_tools_text">The Son Of The Wolf</string>
    <string name="article_body_tools_text">Article Body</string>

    <!--  SettingsFragment Preferences  -->
    <!-- Category Key Values  -->
    <string name="preference_category_key_theme" translatable="false">theme_category</string>
    <string name="preference_category_key_article" translatable="false">article_category</string>
    <!--  Category Title  -->
    <string name="preference_category_title_theme">Theme</string>
    <string name="preference_category_title_article">Articles</string>
    <!--  Theme List Preference Dialog Title  -->
    <string name="preference_list_theme_dialog_title">Choose Theme</string>
    <!--  Preference Article Summary -->
    <string name="preference_summary_article_refresh">Keeps updated with new data from server.</string>
    <string name="preference_summary_article_delete">This will delete all your favorite articles.</string>
    <!--  Preference Article Title -->
    <string name="preference_article_title_refresh">Refresh</string>
    <string name="preference_article_title_delete">Delete Articles</string>
    <!--  Dialog Refresh Article  -->
    <string name="refresh_article_dialog_title">Refresh Favorites ?</string>
    <string name="refresh_article_dialog_message">Choosing Refresh Will Remove All Article Data And
        Updates With New Data. Perform this Only Once A Day.</string>
    <string name="refresh_article_dialog_positive_button">Refresh</string>
    <string name="refresh_article_dialog_negative_button">Cancel</string>
    <!--  Dialog Delete Article  -->
    <string name="delete_article_dialog_title">Delete Favorites ?</string>
    <string name="delete_article_dialog_message">Choosing Delete Will Remove All Your Favorite Articles.</string>
    <string name="delete_article_dialog_positive_button">Delete</string>
    <string name="delete_article_dialog_negative_button">Cancel</string>

    <!--  App Snackbar Message's  -->
    <string name="snackbar_added_to_favorites_message">Added to Favorites</string>
    <string name="snackbar_removed_favorite_message">Removed From Favorites</string>
    <string name="snackbar_refresh_articles_message">Refresh Completed</string>
    <string name="snackbar_delete_articles_message">Deleted All Articles</string>

    <string name="no_internet_connection">No Internet</string>
    <string name="settings_toolbar_title">Settings</string>
</resources>
