<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoriteArticle"
            type="com.developersbreach.xyzreader.repository.database.entity.FavoriteEntity" />

        <variable
            name="favoriteViewModel"
            type="com.developersbreach.xyzreader.viewModel.ArticleFavoritesViewModel" />

        <variable
            name="activity"
            type="android.app.Activity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favorite_item_card_view"
        style="@style/ItemMaterialCardViewStyle"
        favoriteListToDetailClickListener="@{favoriteArticle}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/favorite_article_thumbnail_item_image_view"
                favoriteArticleItemThumbnail="@{favoriteArticle.articleThumbnail}"
                android:layout_width="@dimen/article_item_layout_size"
                android:layout_height="@dimen/article_item_layout_size"
                android:contentDescription="@string/article_image_content_description"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="3:1.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favorite_article_published_date_item_text_view"
                favoriteArticleItemPublishedDate="@{favoriteArticle.articlePublishedDate}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_16dp"
                android:fontFamily="@font/rubik_light"
                android:gravity="center"
                android:textSize="@dimen/card_text_size_16sp"
                app:layout_constraintBottom_toTopOf="@id/favorite_article_title_item_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorite_article_thumbnail_item_image_view" />

            <TextView
                android:id="@+id/favorite_article_title_item_text_view"
                favoriteArticleItemTitle="@{favoriteArticle.articleTitle}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintBottom_toTopOf="@id/favorite_article_by_author_item_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorite_article_published_date_item_text_view"
                tools:text="@string/article_title_tools_text" />

            <TextView
                android:id="@+id/favorite_article_by_author_item_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_4dp"
                android:fontFamily="@font/rubik_light"
                android:gravity="center"
                android:text="@string/by_author"
                android:textSize="@dimen/author_title_text_size"
                app:layout_constraintBottom_toTopOf="@id/favorite_article_author_item_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorite_article_title_item_text_view" />

            <TextView
                android:id="@+id/favorite_article_author_item_image_view"
                favoriteArticleItemAuthor="@{favoriteArticle.articleAuthorName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_8dp"
                android:layout_marginEnd="@dimen/layout_margin_8dp"
                android:layout_marginBottom="@dimen/layout_margin_8dp"
                android:fontFamily="@font/rubik_light"
                android:gravity="center"
                android:textSize="@dimen/card_text_size_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorite_article_by_author_item_text_view"
                tools:text="@string/author_name_tools_text" />

            <ImageView
                android:id="@+id/remove_favorite_article_item_image_view"
                activityFavoriteList="@{activity}"
                deleteFavoriteArticleClickListener="@{favoriteArticle}"
                favoriteCardView="@{favoriteItemCardView}"
                favoriteViewModel="@{favoriteViewModel}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_ripple"
                android:contentDescription="@string/delete_favorite_button_content_description"
                android:padding="@dimen/card_text_size_16sp"
                android:src="@drawable/ic_delete_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>